class Asset:
    name: str

    def __init__(self, name: str):
        self.name = name
